--- a/style.css
+++ b/style.css
@@ -10,3 +10,12 @@ nav {
     margin-bottom: 20px;
 }
 
+nav {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+}
+nav a {
+    flex: 1;
+    text-align: center;
+}
